--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,4 +1,4 @@
-.topbarContainer{
+.topbarContainer {
     height: 50px;
     width: 100%;
     background-color: #1877f2;
@@ -6,74 +6,75 @@
     align-items: center;
     position: sticky;
     top: 0;
-}
-
-.topbarLeft{
+    z-index: 999;
+  }
+  
+  .topbarLeft {
     flex: 3;
-}
-
-.logo{
+  }
+  
+  .logo {
     font-size: 24px;
     margin-left: 20px;
     font-weight: bold;
     color: white;
     cursor: pointer;
-}
-
-.topbarCenter{
+  }
+  
+  .topbarCenter {
     flex: 5;
-}
-
-.searchbar{
+  }
+  
+  .searchbar {
     width: 100%;
     height: 30px;
     background-color: white;
     border-radius: 30px;
     display: flex;
     align-items: center;
-}
-
-.searchIcon {
+  }
+  
+  .searchIcon {
     font-size: 20px !important;
     margin-left: 10px;
-}
-
-.searchInput{
+  }
+  
+  .searchInput {
     border: none;
     width: 70%;
-}
-
-.searchInput:focus{
+  }
+  
+  .searchInput:focus {
     outline: none;
-}
-
-.topbarRight{
+  }
+  
+  .topbarRight {
     flex: 4;
     display: flex;
     align-items: center;
     justify-content: space-around;
     color: white;
-}
-
-.topbarLink{
+  }
+  
+  .topbarLink {
     margin-right: 10px;
     font-size: 14px;
     cursor: pointer;
-}
-
-.topbarIcons{
+  }
+  
+  .topbarIcons {
     display: flex;
-}
-
-.topbarIconItem{
+  }
+  
+  .topbarIconItem {
     margin-right: 15px;
     cursor: pointer;
     position: relative;
-}
-
-.topbarIconBadge{
+  }
+  
+  .topbarIconBadge {
     width: 15px;
-    height: 15;
+    height: 15px;
     background-color: red;
     border-radius: 50%;
     color: white;
@@ -84,12 +85,12 @@
     align-items: center;
     justify-content: center;
     font-size: 12px;
-}
-
-.topbarImg {
+  }
+  
+  .topbarImg {
     width: 32px;
     height: 32px;
     border-radius: 50%;
     object-fit: cover;
     cursor: pointer;
-}
+  }
